# hspolls

./: .gitignore  .stylish-haskell.yaml  README.md  cabal.project  config.dhall  default.nix  docker-compose.dhall  docker-compose.yml  hspolls.cabal  make  pg.dhall.example  prometheus.yml  shell.nix
app/: Main.hs
db/: schema.sql
etc/: config.dhall  prometheus.dhall
frontend/: README.org  bower.json  nginx.nix
frontend/src/: Main.purs
frontend/src/App/: AppM.purs  Prelude.purs
frontend/src/App/Effect/: Navigate.purs
frontend/src/Component/: Router.purs
frontend/src/Data/: Route.purs
frontend/static/: index.html
nix/: README.org  docker.nix  haskell-overlay.nix  haskell-overrides.nix  world.nix
nix/pkgs/: fused-effects.nix  hasql-cursor-query.nix  hasql-pool.nix
src/: Prelude.hs
src/Hp/: API.hs  Config.hs  Email.hs  Entity.hs  Env.hs  Form.hs  GitHub.hs  Hasql.hs  IsEntity.hs  Main.hs  Metrics.hs  Poll.hs  PollAnswer.hs  PollAnswerId.hs  PollFormElement.hs  PollId.hs  PollItemAnswer.hs  PollQuestion.hs  PollQuestionAnswer.hs  PostgresConfig.hs  Subscription.hs  TBroadcastChan.hs  User.hs  UserId.hs  UserProfile.hs
src/Hp/Eff/: Await.hs  Catch.hs  DB.hs  Event.hs  Fail.hs  FirstOrder.hs  GetCurrentTime.hs  GitHubAuth.hs  HttpClient.hs  HttpRequest.hs  HttpSession.hs  Log.hs  ManagePoll.hs  PersistPoll.hs  PersistPollAnswer.hs  PersistUser.hs  SavePoll.hs  SendEmail.hs  Throw.hs  Yield.hs
src/Hp/Eff/Await/: Chan.hs
src/Hp/Eff/Error/: Fail.hs
src/Hp/Eff/Event/: Chan.hs  Print.hs
src/Hp/Eff/GitHubAuth/: AlwaysFail.hs  Http.hs
src/Hp/Eff/HasqlUsageError/: LogAnd500.hs
src/Hp/Eff/HttpRequest/: IO.hs
src/Hp/Eff/HttpSession/: IO.hs
src/Hp/Eff/Log/: Stdout.hs
src/Hp/Eff/ManagePoll/: DB.hs
src/Hp/Eff/PersistPoll/: DB.hs
src/Hp/Eff/PersistPollAnswer/: DB.hs
src/Hp/Eff/PersistUser/: DB.hs
src/Hp/Eff/SendEmail/: AmazonSES.hs  Noop.hs
src/Hp/Eff/ServantClientError/: LogAnd500.hs
src/Hp/Eff/Yield/: Chan.hs  Print.hs
src/Hp/Entity/: Poll.hs  PollAnswer.hs  User.hs
src/Hp/Event/: AnswerPoll.hs  CreatePoll.hs  PollAnswered.hs  PollCreated.hs
src/Hp/GitHub/: API.hs  AccessToken.hs  Auth.hs  ClientId.hs  ClientSecret.hs  Code.hs  ErrorResponse.hs  PostLoginOauthAccessTokenResponse.hs  Response.hs  User.hs  UserName.hs
src/Hp/Handler/: AnswerPoll.hs  CreatePoll.hs  GetMetrics.hs  GetPoll.hs  GetRoot.hs  GetUserProfile.hs  GitHubOauthCallback.hs  Subscribe.hs
src/Hp/Handler/Login/: GET.hs
src/Hp/Handler/Login/GitHub/: GET.hs
src/Hp/Handler/Metrics/: GET.hs
src/Hp/Handler/Root/: GET.hs
src/Hp/RequestBody/: AnswerPoll.hs  CreatePoll.hs  Subscribe.hs
src/Hp/ResponseBody/: GetPoll.hs
src/Hp/Worker/: PollCreatedEmail.hs  SendEmail.hs  SendPollCreatedEmail.hs
