cabal-version: 2.4

name: hspolls
version: 0

library
  build-depends:
    aeson ^>= 1.4,
    base,
    blaze-html ^>= 0.9,
    bytestring,
    containers,
    free,
    fused-effects ^>= 0.3,
    dhall ^>= 1.19,
    generic-lens ^>= 1.1,
    hasql ^>= 1.3.0.3,
    hasql-pool ^>= 0.5.0.1,
    hasql-transaction ^>= 0.7,
    hasql-cursor-transaction ^>= 0.6.3.1,
    hasql-cursor-query ^>= 0.4.4.2,
    http-api-data ^>= 0.4,
    http-client,
    http-client-tls ^>= 0.3,
    jose ^>= 0.8,
    lens ^>= 4.17,
    memory ^>= 0.14,
    prometheus-client ^>= 1.0,
    safe-exceptions,
    servant ^>= 0.16,
    servant-auth ^>= 0.3,
    servant-auth-server ^>= 0.4,
    servant-blaze ^>= 0.9,
    servant-client ^>= 0.16,
    servant-client-core ^>= 0.16,
    servant-server ^>= 0.16,
    transformers,
    text,
    time ^>= 1.8 || ^>= 1.9,
    uuid ^>= 1.3,
    validation ^>= 1,
    wai ^>= 3.2,
    warp ^>= 3.2,

  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    QuantifiedConstraints
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TypeApplications
    TypeOperators
    UnicodeSyntax

  default-language:
    Haskell2010

  exposed-modules:
    Hp.API
    Hp.Config
    Hp.Eff.DB
    Hp.Eff.FirstOrder
    Hp.Eff.GitHubAuth
    Hp.Eff.GitHubAuth.Http
    Hp.Eff.HttpRequest
    Hp.Eff.HttpRequest.IO
    Hp.Eff.HttpSession
    Hp.Eff.HttpSession.IO
    Hp.Eff.ManagePoll
    Hp.Eff.PersistUser
    Hp.Eff.PersistUser.DB
    Hp.GitHub
    Hp.GitHub.AccessToken
    Hp.GitHub.API
    Hp.GitHub.ClientId
    Hp.GitHub.ClientSecret
    Hp.GitHub.Code
    Hp.GitHub.ErrorResponse
    Hp.GitHub.PostLoginOauthAccessTokenResponse
    Hp.GitHub.Response
    Hp.GitHub.User
    Hp.GitHub.UserName
    Hp.Handler.Login.GitHub.GET
    Hp.Handler.Metrics.GET
    Hp.Handler.Root.GET
    Hp.Main
    Hp.Metrics
    Hp.Poll
    Hp.PollFormElement
    Hp.PostgresConfig
    Hp.User
    Hp.UserId
    Prelude

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src

  mixins:
    base hiding (Prelude),
    base (Prelude as PreludeFromBase)

executable hspolls
  build-depends:
    base,
    hspolls

  default-language:
    Haskell2010

  ghc-options:
    -Wall -threaded -rtsopts

  hs-source-dirs:
    app

  main-is:
    Main.hs

  mixins:
    base hiding (Prelude)
