cabal-version: 2.4

name: hspolls
version: 0

library
  build-depends:
    aeson ^>= 1.4,
    amazonka ^>= 1.6,
    amazonka-ses ^>= 1.6,
    base ^>= 4.12,
    blaze-html ^>= 0.9,
    bytestring ^>= 0.10,
    containers ^>= 0.6,
    free ^>= 5.1,
    fused-effects ^>= 0.3,
    dhall ^>= 1.19,
    generic-lens ^>= 1.1,
    hasql ^>= 1.3.0.3,
    hasql-pool ^>= 0.5.0.1,
    hasql-transaction ^>= 0.7,
    hasql-cursor-transaction ^>= 0.6.3.1,
    hasql-cursor-query ^>= 0.4.4.2,
    http-api-data ^>= 0.4,
    http-client ^>= 0.5 || ^>= 0.6,
    http-client-tls ^>= 0.3,
    jose ^>= 0.8,
    lens ^>= 4.17,
    memory ^>= 0.14,
    prometheus-client ^>= 1.0,
    prometheus-metrics-ghc ^>= 1.0,
    resourcet ^>= 1.2,
    safe-exceptions ^>= 0.1,
    say ^>= 0.1,
    servant ^>= 0.16,
    servant-auth ^>= 0.3,
    servant-auth-server ^>= 0.4,
    servant-blaze ^>= 0.9,
    servant-client ^>= 0.16,
    servant-client-core ^>= 0.16,
    servant-server ^>= 0.16,
    slave-thread ^>= 1.0,
    stm ^>= 2.5,
    text ^>= 1.2,
    time ^>= 1.8 || ^>= 1.9,
    transformers ^>= 0.5,
    uuid ^>= 1.3,
    validation ^>= 1,
    wai ^>= 3.2,
    warp ^>= 3.2,

  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    QuantifiedConstraints
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:
    Haskell2010

  exposed-modules:
    Hp.API
    Hp.Config
    Hp.Eff.Await
    Hp.Eff.Await.Chan
    Hp.Eff.DB
    Hp.Eff.Error.Fail
    Hp.Eff.Fail
    Hp.Eff.FirstOrder
    Hp.Eff.GetCurrentTime
    Hp.Eff.GitHubAuth
    Hp.Eff.GitHubAuth.Http
    Hp.Eff.HasqlUsageError.LogAnd500
    Hp.Eff.HttpRequest
    Hp.Eff.HttpRequest.IO
    Hp.Eff.HttpSession
    Hp.Eff.HttpSession.IO
    Hp.Eff.Log
    Hp.Eff.Log.Stdout
    Hp.Eff.PersistPoll
    Hp.Eff.PersistPoll.DB
    Hp.Eff.PersistPollAnswer
    Hp.Eff.PersistPollAnswer.DB
    Hp.Eff.PersistUser
    Hp.Eff.PersistUser.DB
    Hp.Eff.SendEmail
    Hp.Eff.SendEmail.AmazonSES
    Hp.Eff.ServantClientError.LogAnd500
    Hp.Eff.Yield
    Hp.Eff.Yield.Chan
    Hp.Eff.Yield.Print
    Hp.Email
    Hp.Entity
    Hp.Entity.Poll
    Hp.Entity.PollAnswer
    Hp.Entity.User
    Hp.Event.PollAnswered
    Hp.Event.PollCreated
    Hp.GitHub
    Hp.GitHub.API
    Hp.GitHub.AccessToken
    Hp.GitHub.ClientId
    Hp.GitHub.ClientSecret
    Hp.GitHub.Code
    Hp.GitHub.ErrorResponse
    Hp.GitHub.PostLoginOauthAccessTokenResponse
    Hp.GitHub.Response
    Hp.GitHub.User
    Hp.GitHub.UserName
    Hp.Handler.AnswerPoll
    Hp.Handler.CreatePoll
    Hp.Handler.GetMetrics
    Hp.Handler.GetRoot
    Hp.Handler.GetUserProfile
    Hp.Handler.GitHubOauthCallback
    Hp.Handler.Subscribe
    Hp.IsEntity
    Hp.Main
    Hp.Metrics
    Hp.PollFormElement
    Hp.PollQuestion
    Hp.PollQuestionAnswer
    Hp.PostgresConfig
    Hp.RequestBody.AnswerPoll
    Hp.RequestBody.CreatePoll
    Hp.RequestBody.Subscribe
    Hp.Subscription
    Hp.TBroadcastChan
    Hp.UserProfile
    Hp.Worker.SendEmail
    Hp.Worker.SendPollCreatedEmail
    Prelude

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -fno-warn-name-shadowing

  hs-source-dirs:
    src

  mixins:
    base hiding (Prelude),
    base (Prelude as PreludeFromBase)

executable hspolls
  build-depends:
    base,
    hspolls

  default-language:
    Haskell2010

  ghc-options:
    -Wall -threaded -rtsopts

  hs-source-dirs:
    app

  main-is:
    Main.hs

  mixins:
    base hiding (Prelude)
